Also the Migration Guide (Japanese) might be informative: http://inter-mediator.info/ja/migration.html.

Ver.5.1 (in development)
- Update phpseclib to version 0.3.10.
- Change SHA-1 JavaScript library.
  (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
- Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
- Eliminate die() in INTER-Mediator.php to reduce bug risk.
- Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.

Ver.5.0 (February 20, 2015) =====================================
[Major differences from Ver.4.0]
- The realtime multi-client updating with the Pusher (WebSocket).
- The Local Context and Context for DB Entities as the context model.
- Master/Detail style page can be built without JS program.
- Search and listing style page can be built without JS program.
- Calculation expression is supported.
- The "Soft-Delete" or "Logical-Delete" is implemented.
- IMLibChangeEventDispatch, IMLibMouseEventDispatch, IMLibKeyEventDispatch for dispatching events.
- HTML5's user defined attributes are supported.
- As for the FileMaker Server, the fmresultset schema is supported.
- Improve performance of portal access mode for FileMaker Server.
- [INFO] Internet Explorer Ver.8 is dropped out from the supporting browsers.
- [INFO] FileMaker Server 10 has been deprecated. In the near future, INTER-Mediator will require 
  FileMaker Server 11 or later if using FileMaker Server.
=================================================================

Ver.5.0 (February 20, 2015)
- The official INTER-Mediator website is http://inter-mediator.com/ with a new design.
- Change the URL of the page footer to inter-mediator.com.
- The virtual machine for trial can be made with using script.
- Modify "Asset Management Sample" for the INTER-Mediator-Server virtual machine.
- Thanks to Mr. Kazuaki Osawa for cooperating to clarify the platform issue about the vm build script.