@@ -12,6 +12,7 @@ Ver.5.1 (in development)
 - Update phpseclib to version 0.3.10.
 - Change SHA-1 JavaScript library.
   (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
+- Improve error handling in DB_FileMaker_FX class when loading FX.php.
 - Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
 - Eliminate die() in INTER-Mediator.php to reduce bug risk.
 - Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.
